fix bug that causes text to overflow from timetable when window shrunk horizontally

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,8 +66,9 @@ table#timeTable {
 	border-spacing: 20px 5px;
 	background-color: rgba(63, 142, 230, 0.8);
 
-	table-layout: fixed;
+	
 	width: 30%;
+	min-width: 20%;
 }
 
 #turnstile #cryptic {
